# rapid-rs

./: .gitignore  AUTH.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FILE_NAVIGATOR.md  MARKETING.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  START_HERE.md  TESTING.md  launch.sh
examples/: graphql-api.rs
examples/auth-api/: Cargo.toml
examples/auth-api/src/: main.rs
examples/rest-api/: Cargo.toml
examples/rest-api/src/: main.rs
rapid-rs/: Cargo.toml
rapid-rs-cli/: Cargo.toml
rapid-rs-cli/src/: main.rs
rapid-rs-cli/src/commands/: new.rs
rapid-rs-cli/src/templates/: graphql.rs  grpc.rs  mod.rs
rapid-rs-macros/: Cargo.toml
rapid-rs-macros/src/: lib.rs
rapid-rs/examples/: auth-api.rs  rest-api.rs  test_jobs.rs
rapid-rs/src/: app.rs  config.rs  error.rs  extractors.rs  lib.rs  prelude.rs  testing.rs
rapid-rs/src/admin/: handlers.rs  mod.rs  ui.rs
rapid-rs/src/auth/: config.rs  extractors.rs  handlers.rs  jwt.rs  middleware.rs  mod.rs  models.rs  password.rs
rapid-rs/src/cache/: memory.rs  mod.rs  redis.rs
rapid-rs/src/database/: backends.rs  migrations.rs  mod.rs
rapid-rs/src/feature_flags/: mod.rs  provider.rs
rapid-rs/src/graphql/: handler.rs  mod.rs  schema.rs
rapid-rs/src/jobs/: mod.rs  queue.rs  scheduler.rs  storage.rs  worker.rs
rapid-rs/src/metrics/: mod.rs  prometheus.rs
rapid-rs/src/middleware/: request_id.rs
rapid-rs/src/multi_tenancy/: context.rs  middleware.rs  mod.rs
rapid-rs/src/notifications/: email.rs  mod.rs  sms.rs
rapid-rs/src/rate_limit/: middleware.rs  mod.rs
rapid-rs/src/uploads/: handler.rs  mod.rs  storage.rs
rapid-rs/src/websocket/: handler.rs  message.rs  mod.rs  room.rs  server.rs
