[workspace]
members = ["rapid-rs", "rapid-rs-cli", "rapid-rs-macros"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Ashish Sharda <ashishjsharda@gmail.com>"]
repository = "https://github.com/ashishjsharda/rapid-rs"
homepage = "https://github.com/ashishjsharda/rapid-rs"
documentation = "https://docs.rs/rapid-rs"
keywords = ["web", "framework", "axum", "api", "rest"]
categories = ["web-programming::http-server", "asynchronous"]

[workspace.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
config = "0.14"
validator = { version = "0.18", features = ["derive"] }
utoipa = { version = "4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

# Auth dependencies
jsonwebtoken = "9.3"
argon2 = "0.5"
async-trait = "0.1"
