[package]
name = "rapid-rs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CLI tool for rapid-rs framework"

[[bin]]
name = "rapid"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
handlebars = "5.1"

rapid-rs = "0.1.4"
#rapid-rs = { path = "../rapid-rs" }
