[package]
name = "rapid-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Zero-config, batteries-included web framework for Rust - FastAPI meets Spring Boot"
readme = "../README.md"

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
config.workspace = true
validator.workspace = true
utoipa.workspace = true
utoipa-swagger-ui = { workspace = true, optional = true }

[features]
default = ["swagger-ui"]
swagger-ui = ["utoipa-swagger-ui"]
