[package]
name = "rapid-rs"
version = "0.4.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Zero-config, batteries-included web framework for Rust - FastAPI meets Spring Boot"
readme = "../README.md"

[dependencies]
axum = { workspace = true, features = ["ws"] }  # ← ADDED "ws" feature
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
config.workspace = true
validator.workspace = true
utoipa.workspace = true
utoipa-swagger-ui = { workspace = true, optional = true }

# Phase 2 dependencies
jsonwebtoken = { version = "9.3", optional = true }
argon2 = { version = "0.5", optional = true }
async-trait = { version = "0.1", optional = true }

# Phase 3 dependencies
dashmap = { version = "5.5", optional = true }
futures = { version = "0.3", optional = true }
tokio-tungstenite = { version = "0.21", optional = true }
moka = { version = "0.12", features = ["future"], optional = true }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"], optional = true }
governor = { version = "0.6", optional = true }
prometheus = { version = "0.13", optional = true }
metrics = { version = "0.22", optional = true }
metrics-exporter-prometheus = { version = "0.13", optional = true }

[features]
default = ["swagger-ui", "auth"]
swagger-ui = ["utoipa-swagger-ui"]
auth = ["jsonwebtoken", "argon2", "async-trait"]
testing = []
database = []  # ← ADDED database feature
db-tests = []

# Phase 3 features
jobs = ["async-trait", "dashmap"]
websocket = ["futures", "tokio-tungstenite"]  # ← ADDED dependencies
cache = ["moka"]
cache-redis = ["cache", "redis"]
rate-limit = ["governor"]
observability = ["prometheus", "metrics", "metrics-exporter-prometheus"]
feature-flags = []
multi-tenancy = []

# Enable all features
full = [
    "swagger-ui",
    "auth",
    "testing",
    "database",
    "jobs",
    "websocket",
    "cache",
    "cache-redis",
    "rate-limit",
    "observability",
    "feature-flags",
    "multi-tenancy"
]